<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/string_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_cuadrado"
        android:layout_width="369dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_titulo"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="421dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_cuadraro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/string_square" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_lado1cuadrado"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/string_lado1cuadrado"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_cuadrado"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:text="@string/string_calc"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_acuadrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_empyty" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_cuadrado"
            android:layout_width="305dp"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            tools:src="@mipmap/cuadrado" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_triangulo"
        android:layout_width="372dp"
        android:layout_height="212dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_cuadrado">

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_triangulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal"
                android:text="@string/string_triangulo"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_baseT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/string_baseT"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_alturaT"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/string_alturaT"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_triangulo"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/string_calc"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_atriangulo"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/string_empyty" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_triangulo"
            android:layout_width="115dp"
            android:layout_height="81dp"
            android:layout_gravity="center_horizontal|center_vertical"
            tools:src="@mipmap/triangulo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_triangulo">

        <LinearLayout
            android:layout_width="257dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_circulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/string_circulo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditText_radio"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/string_radio"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_acirculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_calc" />

            <TextView
                android:id="@+id/textView_acirculo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/string_empyty" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_circulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="8dp"
            tools:src="@mipmap/circulo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>